--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -28,7 +28,7 @@
                 <a href="{{ url_for('integrated_apps') }}" class="nav-item">
                     <i class="fas fa-plug"></i>
                 </a>
-                <a href="#" class="nav-item">
+                <a href="{{ url_for('latest_updates') }}" class="nav-item">
                     <i class="fas fa-chart-bar"></i>
                 </a>
             </nav>
